# oat-zero

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: eval_self_reflect.py  math_grader.py  script.sh
data/: math_train_500.json  math_train_500_r1.json
data/math_level3to5_8k/eval/: state.json
data/math_level3to5_8k/train/: dataset_info.json  state.json
oat_zero/: math_oracle.py
oat_zero/qwen_math_eval_toolkit/: parser.py  utils.py
training/: run_grpo.sh  run_grpo_7b.sh  zero_math.py
