[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oat-zero"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Zichen", email = "liuzc@sea.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Zichen/oat-zero#readme"
Issues = "https://github.com/Zichen/oat-zero/issues"
Source = "https://github.com/Zichen/oat-zero"

[tool.hatch.version]
path = "oat_zero/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:oat_zero tests}"

[tool.coverage.run]
source_pkgs = ["oat_zero", "tests"]
branch = true
parallel = true
omit = [
  "oat_zero/__about__.py",
]

[tool.coverage.paths]
oat_zero = ["oat_zero", "*/oat-zero/oat_zero"]
tests = ["tests", "*/oat-zero/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
